sass/index.scss
/* ... */
#bumps {
	position: relative;
	padding: 0.75rem 0 1rem 0;
	overflow: hidden;

	&-title {
		margin: 0 1rem;
		color: var(--primary-color);
		font-size: 1.5rem;
		line-height: 1.25;
	}

	p:has(&-subtitle) {
		margin-block-start: 0.25rem;
	}

	small {
		margin: 0 1rem;
	}

	.marquee-wrapper {
		$mask: linear-gradient(
			to right,
			transparent,
			black 1rem,
			black calc(100% - 1rem),
			transparent
		);
		-webkit-mask-image: $mask;
		display: flex;
		position: relative;
		mask-image: $mask;
		overflow: hidden;

		&:hover .marquee ul {
			animation-play-state: paused;

			li img {
				filter: contrast(200%) brightness(75%) grayscale(100%);
			}
		}

		.marquee {
			display: flex;
			position: absolute;

			ul {
				display: flex;
				flex-shrink: 0;
				animation: marquee-scroll linear infinite;
				transition: var(--transition);
				margin: 0;
				padding: 0;
				list-style: none;

				@keyframes marquee-scroll {
					from {
						transform: translateX(0%);
					}

					to {
						transform: translateX(-100%);
					}
				}

				li {
					display: flex;
					flex-shrink: 0;
					margin-inline-end: 0.25rem;

					a img:active {
						transform: scale(var(--active));
					}

					img {
						transition: var(--transition);
						margin: 0;
						max-width: none;

						&:hover {
							filter: none;
						}
					}
				}
			}
		}

		&#netscape {
			margin-block-end: 1rem;
			height: 1.9375rem; // 31px

			.marquee ul {
				animation-duration: 60s;
			}
		}

		&#stamps {
			margin-block-start: 1rem;
			height: 3.5rem; // 56px

			.marquee ul {
				animation-duration: 40s;
				animation-direction: reverse;
			}
		}
	}

	#bumps-bottom-sheet {
		box-shadow: none;
		border-radius: 0;
		background-color: transparent;
		padding: 0;

		summary {
			display: inline-block;
			position: absolute;
			top: 0.5rem;
			right: 0.5rem;
			transition: var(--transition);
			border-radius: var(--rounded-corner-small);
			background-color: transparent;
			padding: 0.5rem;
			line-height: 0;
			list-style: none;

			&:hover {
				box-shadow: var(--edge-highlight);
				background-color: var(--fg-muted-1);
			}

			&:active {
				transform: scale(var(--active));
			}

			&::marker,
			&::-webkit-details-marker {
				display: none;
			}

			.icon {
				--icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M7 1v6H1v2h6v6h2V9h6V7H9V1zm0 0'/%3E%3C/svg%3E");
				-webkit-mask-image: var(--icon);
				vertical-align: -0.125em;
				mask-image: var(--icon);
				transition: var(--transition);
				background-color: var(--fg-muted-4);
				width: 1rem;
				height: 1rem;
			}
		}

		div {
			-webkit-backdrop-filter: var(--blur);
			position: absolute;
			backdrop-filter: var(--blur);
			inset: 3rem 0 0;
			box-shadow: var(--edge-highlight), var(--shadow);
			border-radius: var(--rounded-corner);
			background-color: var(--nav-bg);
			padding: 1rem;
			overflow: auto;

			p:first-of-type {
				margin-block-start: 0;
			}

			p:has(img) {
				margin: 1rem 0;
				text-align: center;
			}

			img {
				display: inline-block;
				margin: 0;

				&:first-child {
					margin-inline-end: 0.25rem;
				}
			}
		}

		&[open] {
			summary .icon {
				transform: rotate(45deg);
			}

			div {
				animation: bottom-sheet-open var(--transition);

				@keyframes bottom-sheet-open {
					from {
						transform: translateY(1rem);
						opacity: 0;
					}
				}
			}
		}
	}
}

.dialog-buttons {
	position: relative;

	.inline-button:hover + #dont,
	.inline-button:focus-visible + #dont {
		transform: none;
		opacity: 1;
	}

	@supports not selector(:focus-visible) {
		.inline-button:focus + #dont {
			transform: none;
			opacity: 1;
		}
	}

	#dont {
		$url: url("assets/dont.png");
		-webkit-mask-image: $url;
		-webkit-pointer-events: none;
		position: absolute;
		top: calc(-50% + -1.1875rem);
		left: 6.5rem;
		transform: scale(0.5);
		transform-origin: left;
		opacity: 0;
		mask-image: $url;
		transition: var(--transition);
		background-color: var(--primary-color);
		width: 22.25rem;
		height: 7.0625rem;
		pointer-events: none;

		@media only screen and (max-width: 484px) {
			display: none;
		}

		@media (prefers-reduced-motion) {
			$url: url("assets/dont-static.png");
			-webkit-mask-image: $url;
			mask-image: $url;
		}
	}
}

#subway-surfers,
#family-guy {
	position: fixed;
	z-index: 1;
	box-shadow: var(--shadow);
	border: none;
	border-radius: var(--rounded-corner);
	width: calc(((100vw - var(--container-width)) / 2) - 2rem);
	max-height: calc(100vh - 2rem);
}

#subway-surfers {
	top: 1rem;
	right: 1rem;
	aspect-ratio: 0.45 / 1;
}

#family-guy {
	bottom: 1rem;
	left: 1rem;
	aspect-ratio: 16 / 9;
}

